--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="//ty.yukir.net/ty.css">
-<link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400italic'>
+<link rel="stylesheet" href="/css/style.css">
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic'>
 
 </head>
 <body>
@@ -18,7 +18,7 @@
 </div>
 
 <footer>
-    <nav class="nav"><a class="banner" href="/">nagare</a></nav>
+    <nav class="nav"><span class="banner"><a href="/">nagare</a></span></nav>
 </footer>
 
 {% include justfont.html %}
