--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="//ty.yukir.net/ty.css">
 <link rel="stylesheet" href="/css/style.css">
-<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic'>
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic'>
 
 </head>
 <body>
