--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ a:hover {
 }
 
 body {
-    font-family: 'Libre Baskerville', 'ipamjm', serif;
+    font-family: 'Crimson Text', 'ipamjm', serif;
 }
 
 h1 {
