--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,11 @@ a:hover {
 }
 
 body {
-    font-family: 'Crimson Text', 'datm3', serif;
+    font-family: 'Crimson Text', 'ipamjm', serif;
 }
 
 h1 {
     font-weight: normal;
-    font-family: 'Crimson Text', 'datm7', serif;
 }
 
 .pdate {
