--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,15 @@ footer {
 a {
     color: #000;
     text-decoration: none;
-    border-bottom: 1px solid #CCC;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.3) 50%);
+    background-position: 0 18px;
+    background-repeat: repeat-x;
+    background-size: 2px 2px;
     text-shadow: -3px 1px 0 #FFF,-2px 1px 0 #FFF,-1px 1px 0 #FFF,1px 1px 0 #FFF,2px 1px 0 #FFF,3px 1px 0 #FFF;
 }
 
 a:hover {
-    border-bottom: 1px solid #777;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.6) 50%);
 }
 
 body {
