--- a/style.css
+++ b/style.css
@@ -1,22 +1,54 @@
 body {
-  font-family: "Secular One", serif;
-  font-size: 4vh;
-  line-height: 1;
+  font-family: "Bree Serif", sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
-section {
-  width: 80%;
-  margin: 48vh auto auto;
-  text-align: justify;
+#zodiac {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
-a {
+.link {
+  position: absolute;
+  text-transform: uppercase;
   color: black;
   text-decoration: none;
+  letter-spacing: .06em;
   transition: .15s;
 }
 
-a:hover {
+.link:hover {
   color: teal;
   transition: .15s;
+}
+
+.hori {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.vert {
+  top: 50%;
+  transform: translateY(-50%) rotate(90deg);
+}
+
+.medium {
+  left: 1vmin;
+}
+
+.github {
+  right: 1vmin;
+}
+
+.behance {
+  top: 1vmin;
+}
+
+.instagram {
+  bottom: 1vmin;
 }
