--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Bree Serif", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   width: 100%;
   height: 100%;
 }
@@ -18,7 +18,7 @@ body {
   text-transform: uppercase;
   color: black;
   text-decoration: none;
-  letter-spacing: .06em;
+  letter-spacing: .3em;
   transition: .15s;
 }
 
