--- a/style.css
+++ b/style.css
@@ -1,54 +1,56 @@
-body {
-  font-family: "Source Sans Pro", sans-serif;
-  width: 100%;
-  height: 100%;
+h1 {
+  position: absolute;
+  top: 50vh;
+  transform: translateY(-50%);
+  width: 100vw;
+  text-align: center;
+  font-size: 20vmin;
+  line-height: 1;
+  font-weight: lighter;
+  margin: 0;
 }
 
-#zodiac {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
-.link {
-  position: absolute;
-  text-transform: uppercase;
+a {
   color: black;
   text-decoration: none;
-  letter-spacing: .3em;
-  transition: .15s;
 }
 
-.link:hover {
+div {
+  font-family: "calluna-sans", sans-serif !important;
+}
+
+a:hover {
   color: teal;
-  transition: .15s;
 }
 
-.hori {
-  left: 50%;
+.fleuron {
+  position: absolute;
+  top: 15vh;
+  left: 50vw;
   transform: translateX(-50%);
+  font-size: 2rem;
 }
 
-.vert {
-  top: 50%;
-  transform: translateY(-50%) rotate(90deg);
+.author,
+.credits {
+  position: absolute;
+  bottom: 15vh;
+  font-weight: bold;
 }
 
-.medium {
-  left: 1vmin;
+.author {
+  left: 5vw;
 }
 
-.github {
-  right: 1vmin;
+.credits {
+  right: 5vw;
 }
 
-.behance {
-  top: 1vmin;
+.credits ul {
+  margin: 0;
 }
 
-.instagram {
-  bottom: 1vmin;
+.credits li {
+  list-style: none;
+  text-align: right;
 }
